--- a/app.json
+++ b/app.json
@@ -6,8 +6,7 @@
     "sdkVersion": "33.0.0",
     "platforms": [
       "ios",
-      "android",
-      
+      "android"
     ],
     "version": "1.0.0",
     "orientation": "portrait",
