--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "native-base": "^2.13.4",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
+    "react-modal-image": "^2.4.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-animated-loader": "^0.0.7",
     "react-native-web": "^0.11.4",
