--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-modal-image": "^2.4.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-animated-loader": "^0.0.7",
+    "react-native-credit-card-input": "^0.4.1",
     "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.1",
     "react-redux": "^7.1.0",
