paytm payment gateway integration

--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "Shopping-App",
     "slug": "Shopping",
     "privacy": "public",
-    "sdkVersion": "33.0.0",
+    "sdkVersion": "34.0.0",
     "platforms": [
       "ios",
       "android"
@@ -24,6 +24,9 @@
     ],
     "ios": {
       "supportsTablet": true
+    },
+    "android": {
+      "package": "com.shopping.reactnative"
     }
   }
 }
