--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "expo": "^33.0.0",
     "expo-image-picker": "~5.0.2",
+    "expo-permissions": "~5.0.1",
     "firebase": "^6.3.2",
     "native-base": "^2.13.4",
     "react": "16.8.3",
